@@ -1,11 +1,12 @@
 ﻿+++ version 0.12.0-beta1
-* tabs: 'close all tabs but active one' action added (Juzef)
+* tabs: "Close all tabs but active one" action added (Juzef)
 * last_seen: #1430 done: added context menu in Last Seen window (Vogel)
 * configuration: #2529 fixed: prevent loss of XML nodes with same tags in one parent node (ultr)
 * tabs: #2098, #2497 fixed: respect blocking window closing settings (Vogel)
 * history: #2539 fixed: improper import of 0.6.5 history in some cases (Vogel)
 * gui: #2479 fixed: information panel didn't display anything for chats (Vogel)
 * gui: #2472 fixed: use common status icons in Status Window when changing status for all accounts (Vogel)
+* single_window: #2470 fixed: "Start Docked" didn't work for Single Window plugin (Vogel)
 
 +++ version 0.12.0-alpha4
 * sql_history: #2484 done: removed uuids from history file, now history can be moved between instances (Vogel)
